1 释放assetbundle资源 2 loader类增加释放共享assetbundle资源方法 3 加入tcpServer 方便组建局域网。

--- a/Client/tools/netProtocal/protocal/对接客户端常量说明.md
+++ b/Client/tools/netProtocal/protocal/对接客户端常量说明.md
@@ -1,94 +1,1 @@
-**本文档是md格式，Mac下推荐使用Mou.app查看。**
-
-#建筑类型字符串
-
-```
-"planetary_fortress", %% 行星要塞
-"engineering_bay", %% 工程港.
-"star_portal", %% 星际港.
-"tech_lab", %% 科技实验室.
-"factory", %% 修理厂
-"affairs_hall", %% 事务大厅
-"krypton_center" %% 氪晶实验室
-"commander_academy", %%事务大厅
-```
-
-#战斗名词
-
-```
-durability,   %% 耐久度/HP
-level,      %% 等级
-accumulator,  %% 怒气
-vessels,    %% 职业
-ph_armor,     %% 装甲
-shield,     %% 护甲
-ph_attack,    %% 攻击力
-en_attack,    %% 能量武器
-en_armor,     %% 能量装甲
-sp_attack,    %% 技能伤害
-sp_armor,     %% 技能防御
-fce,      %% Fire Control Efficacy 就是速度
-crit_lv,    %% 暴击等级
-crit_damage,  %% 暴击率（暴击带来的额外伤害）
-anti_crit,    %% 抗暴击等级
-hit_rate,     %% 命中率
-motility,     %% 躲闪率/机动性
-penetration,  %% 穿透率（抗格挡）
-intercept,    %% 拦截（格挡）
-accumulator   %% 暴击
-```
-
-#PVE
-###battle_id为游戏中唯一标示一场pvebattle的整型数,分为三个部分,act_id, chapter_id, battleId.例如 
-
-```
-1001001 -> 1 001 001
-%% 表示第1个act的第1个chapter的第1个battle.
-1001002 -> 1 001 002
-%% 表示第1个act的第1个chapter的第2个battle. 以此类推.
-```
-
-###chapter_id也和battle_id类似，分为两个部分:act_id, chapter_id.例如
-
-```
-1001  -> 1 001 
-%% 表示第1个act的第1个chapter.  
-1002  -> 1 002 
-%% 表示第1个act的第2个chapter.  
-```  
-
-###challenge被实现为一个特殊的pve，它的actid为50，只有一个chapter:为50001.
-
-###adventure被实现为一个特殊的pve，它的actid为51，可以使用"[active_adventure, 51001001]"激活某场adventure.
-
-#adventure状态值
-
-```
--define(ADVENTURE_BEAT,   1). %% 从来没有打过的状态
--define(ADVENTURE_UNLOCK, 2). %% 今天未打过的状态
--define(ADVENTURE_DEFEAT, 3). %% 今天打过的状态
-```
-
-#挑战赛
-
-```
--define(CHALLENGE_DONE, 1).   %% 已经打过了
--define(CHALLENGE_BEAT, 2).   %% 可以打，但没打过
-```
-
-
-#game_item约定,用户给用户奖励:
-
-```
-money
-credit
-money 
-technique
-prestige      
-lepton
-quark 
-klevel
-kenergy
-exp
-item, 2323
-```
+﻿**本文档是md格式，Mac下推荐使用Mou.app查看。
